# linch-redact

./: .env.example  .gitignore  .release-it.json  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/data/: heuristics.json
crates/core/data/languages/en/: org_suffixes.txt
crates/core/data/languages/ja/: org_suffixes.txt  surnames.txt
crates/core/data/languages/ko/: org_suffixes.txt  surnames.txt
crates/core/data/languages/zh/: address_keywords.txt  excluded_words.txt  org_suffixes.txt  surnames.txt
crates/core/src/: document.rs  lib.rs  rules.rs
crates/core/src/rules/: heuristics.rs  mod.rs
crates/ocr/: Cargo.toml
crates/ocr/src/: det.rs  error.rs  lib.rs  preprocess.rs  rec.rs  threading.rs
crates/pdf/: Cargo.toml
crates/pdf/src/: lib.rs
crates/render/: Cargo.toml
crates/render/src/: lib.rs
crates/rules/: Cargo.toml
crates/rules/src/: lib.rs
crates/text/: Cargo.toml
crates/text/src/: lib.rs
crates/verify/: Cargo.toml
crates/verify/src/: lib.rs
docs/: 11-ocr-line-segmentation.md  12-ocr-engine-selector.md  architecture-extension-plan.md  paddle-setup.md  solution.md  task-breakdown.md
scripts/: kill-port.mjs  setup-pdfium.sh
src/: App.tsx  config.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs
src-tauri/src/ocr/: engine.rs  mod.rs  paddle.rs  tesseract.rs  types.rs
src-tauri/src/pdf/: annotations.rs  detection.rs  forms.rs  image.rs  metadata.rs  mod.rs  safe_render.rs  text.rs  types.rs  utils.rs
src/components/layout/: Footer.tsx  MainPanel.tsx  RightPanel.tsx  Sidebar.tsx  TitleBar.tsx
src/components/shared/: Logo.tsx
src/components/ui/: card.tsx  dialog.tsx
src/data/: ocrManifest.ts
src/lib/: pdf.ts
src/lib/tauri/: config.ts  document.ts  (+4 more)
src/locales/: en.ts  index.ts  zh.ts
src/stores/: index.ts  useDetectionRulesStore.ts  useEditorStore.ts  useFileStore.ts  useOcrStore.ts  useProcessingStore.ts  useSettingsDialogStore.ts  useSettingsStore.ts
src/types/: index.ts
(+18 files in other folders)
