[package]
name = "linch-core"
version = "0.1.0"
edition = "2021"

[dependencies]
linch-rules = { path = "../rules" }
linch-ocr = { path = "../ocr" }
linch-pdf = { path = "../pdf" }
linch-render = { path = "../render" }
linch-verify = { path = "../verify" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
