[package]
name = "linch-ocr"
version = "0.1.0"
edition = "2021"

[dependencies]
# ONNX Runtime v2
ort = { version = "2.0.0-rc.11", default-features = false, features = ["std", "download-binaries", "ndarray", "tls-native"] }
ndarray = "0.17"

# Image processing
image = "0.25"
imageproc = "0.25"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"

# Error handling
thiserror = "1"
